# hardest-climbs

./: .gitignore  .tool-versions  LICENSE  README.md  boulder.json  data.json  db.py  flask_app.py  functions.py  generic.html  index.html  lead.json  pyproject.toml  refresh.py  rules_climbers.py  rules_routes.py  rules_sends.py  run_validation.ipynb  toolkit.html  update.py
.github/workflows/: ci.yml
data/: boulder.json  climbers.csv  climbers_table.csv  lead.json  routes.csv  routes_table.csv  sends_table.csv
dq/: data_validator.py  rules_climbers.py  rules_routes.py  rules_sends.py
hardest_climbs/: __init__.py
src/: auth.py  config.py  json_to_table.py  models.py  tunnel.py  utils.py  validate_csv.py  validate_json.py
templates/: base.html  generic.html  index.html  single.html  toolkit.html
