[tool.poetry]
name = "hardestclimbs.com"
version = "0.2.0"
description = "A website for the hardest climbs in the world"
authors = ["Dev <admin@hardestclimbs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"
jsonschema = "^4.7.2"
GitPython = "^3.1.27"
requests = "^2.28.1"
Flask-SQLAlchemy = "^3.0.3"
mysqlclient = "^2.1.1"
pydantic = "^1.10.9"

[tool.poetry.dev-dependencies]
sshtunnel = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
