[tool.poetry]
name = "hardestclimbs.com"
version = "0.1.0"
description = "A website for the hardest climbs in the world"
authors = ["Dev <admin@hardestclimbs.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Flask = "^2.1.3"
jsonschema = "^4.7.2"
GitPython = "^3.1.27"
requests = "^2.28.1"
python-dotenv = "^0.20.0"
pandas = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
