[project]
name = "hardestclimbs.com"
version = "0.1.0"
description = "A website for the hardest climbs in the world"
authors = ["Dev <admin@hardestclimbs.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gitpython>=3.1.44",
    "jsonschema>=4.23.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pandera>=0.23.1",
]
